[tool.poetry]
name = "basilisp-flask"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "basilisp_flask", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
basilisp = "^0.2.4"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
